k8s-manifest/service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: mywebsite
    tier: service
spec:
  replicas: 1
  # how many pods you want to maintain running
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
    spec:
      containers:
      - name: mywebsite
        image: mywebsite-image
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        volumes:
        - name: mywebsite-volume
          persistentVolumeClaim:
            claimName: service-pvc
  selector:
    matchLabels:
      app: myapp
      # use for monitoring existing pods with certain labels
