k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asiayo
  namespace: asiayo
  annotations:
    kubernetes.io/ingress.class: "nginx" # Or your chosen Ingress controller
spec:
  rules:
  - host: asiayo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-lb
            port:
              number: 80
